# ttsprototyper

./: .gitignore  README.md  pyproject.toml
src/ttsprototyper/: main.py
