[project]
name = "ttsprototyper"
version = "0.2.0"
description = ""
authors = [
    {name = "Nils P. Kujath",email = "63961429+NilsKujath@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ttsprototyper", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
